src/skins/default/en/css/lc.css
/* ... */
#shopping-cart .cart-buttons form {
  display: inline;
  padding-left: 10px;
}

#shopping-cart .sums {
  float: right;
  width: 49%;
  text-align: right;
  padding: 0px;
  margin: 0px;
  list-style: none;
  background: transparent none;
  padding-top: 15px;
}

#shopping-cart .sums li {
  padding: 0px;
  margin: 0px;
  list-style: none;
  background: transparent none;
  font-size: 18px;
}

#shopping-cart .sums li strong {
  font-weight: normal;
}

#cart-right {
  float: right;
  width: 240px;
  margin-top: 14px;
}

#cart-right .totals {
  border: 1px solid #dfdfdf;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  padding: 15px;
  margin: 0px;
  list-style: none;
  background: transparent none;
}

#cart-right .totals li {
  position: relative;
  text-align: right;
  padding: 0px;
  margin: 0px;
  list-style: none;
  background: transparent none;
  font-size: 16px;
  padding: 4px;
  white-space: nowrap;
}

#cart-right .totals li strong {
  display: block;
  float: left;
  color: #7e7e7e;
  font-weight: normal;
}

#cart-right .totals li.total {
  font-size: 22px;
  padding-top: 12px;
  color: #f57300;
}

#cart-right .totals li.total strong {
  color: #505b67;
}

#cart-right .totals li.button {
  padding-top: 7px;
  padding-bottom: 0px;
  text-align: center;
}

#cart-right .totals li.button button.disabled span {
  background-image: none;
}

#cart-right .box {
  padding: 0px;
  background-color: #f6f6f6;
  margin-top: 20px;
}

#cart-right .box ul {
  padding: 0px;
  margin: 0px;
}

#cart-right .box ul li {
  padding: 6px 0px;
  margin: 0px;
  background-image: none;
  list-style: none;
}

#cart-right .estimator {
  padding: 11px 21px;
}

#cart-right .estimator ul span {
  color: #7e7e7e;
  display: block;
}

#cart-right .estimator .link {
  padding: 6px 0px;
}

#cart-right .estimator .buttons {
  text-align: center;
}

#cart-right .estimator .error {
  display: block;
}

/**
 * Shipping estimator
 */
form.estimator ul,
  .estimate-methods ul
{
  margin: 0px;
  padding: 0px;
}

form.estimator ul.form li,
  .estimate-methods ul li
{
  list-style: none;
  background-image: none;
  padding: 0px;
  margin: 0px;
}

form.estimator ul.form li {
  padding: 13px 0px;
}

form.estimator ul.form label {
  color: #53769d;
  width: 76px;
  display: block;
  float: left;
  font-weight: normal;
  line-height: 24px;
  white-space: nowrap;
}

form.estimator ul.form .field-country {
  width: 352px;
}

form.estimator ul.form .field-zipcode {
  width: 62px;
}

form.estimator .main,
  .estimate-methods .main
{
  text-align: center;
}

.estimate-methods h3 {
  margin-top: 45px;
  margin-bottom: 10px;
}

.estimate-methods ul {
  padding-left: 3px;
  padding-right: 36px;
}

.estimate-methods ul li {
  padding: 6px 0px;
}

.estimate-methods ul li span {
  white-space: nowrap;
  float: right;
}

.estimate-methods .buttons {
  padding-top: 12px;
}

/**
 * Checkout
 */
.checkout-block {
  padding-top: 8px;
}

/* Common styles */
.checkout-block ul {
  margin: 0px;
  padding: 0px;
}

.checkout-block hr {
  clear: both;
}

.checkout-block li {
  margin: 0px;
  padding: 0px;
  list-style: none;
  background: transparent none;
}

/* Profile block */
.checkout-block .profile {
  margin: 0px;
  padding-left: 3px;
  padding-bottom: 26px;
}

.checkout-block .profile div.create {
  width: 380px;
  float: left;
}

.checkout-block .profile h3 {
  border: 0px none;
  margin: 0px;
  font-size: 16px;
  padding-left: 2px;
}

.checkout-block .profile .create input#create_profile_email {
  margin-top: 10px;
  margin-bottom: 12px;
  width: 337px;
}

.checkout-block .profile .create .selector
.checkout-block .profile .create .selector *
{
  vertical-align: middle;
}

.checkout-block .profile .create .selector input {
  margin-left: 6px;
  margin-right: 4px;
}

.checkout-block .profile .create .username {
  padding-top: 10px;
  padding-bottom: 11px;
  vertical-align: middle;
  position: relative;
}

.checkout-block .profile .create .username label {
  color: #53769d;
  vertical-align: middle;
  font-size: 14px;
  padding-right: 6px;
  display: inline;
}

.checkout-block .profile .create .username input {
  width: 257px;
  vertical-align: middle;
}

.checkout-block .profile .create .username .username-verified {
  color: #53769d;
  vertical-align: middle;
  position: absolute;
  display: block;
  top: 13px;
  left: 362px;
  font-size: 12px;
  white-space: nowrap;
}

.checkout-block .profile .or {
  float: left;
  width: 60px;
  height: 90px;
  line-height: 84px;
  text-align: center;
  vertical-align: middle;
  color: #b0b0b0;
  font-size: 20px;
  background: transparent url(../images/checkout_or_bg.png) no-repeat 9px 6px;
}

.checkout-block .profile .login {
  float: left;
  padding-left: 17px;
  text-align: center;
}

.checkout-block .profile .login button {
  margin-top: 15px;
}

.checkout-block .profile .logged {
  font-size: 14px;
  padding-bottom: 2px;
}

.checkout-block .profile .logged a.view-profile {
  margin-left: 13px;
}

.checkout-block .profile .logged a.logoff {
  margin-left: 10px;
}

/* Steps */
.checkout-block .shipping-step.current {
  width: 425px;
}

.checkout-block .payment-step.inactive {
  width: 280px;
}

.checkout-block .review-step.inactive {
  width: 255px;
}

.checkout-block .shipping-step.inactive {
  width: 265px;
}

.checkout-block .payment-step.current {
  width: 440px;
}

.checkout-block .review-step.current {
  width: 415px;
}

.checkout-block .steps .step {
  float: left;
}

.checkout-block .steps h2 {
  margin-top: 6px;
  margin-bottom: 10px;
  padding-left: 0px;
  color: #fff;
  position: relative;
}

.checkout-block .steps h2 span.text {
  display: block;
  padding-left: 20px;
  padding-top: 5px;
  padding-bottom: 6px;
}

.checkout-block .steps .left-arrow h2 span.text {
  margin-left: 10px;
}

.checkout-block .steps .right-arrow h2 span.text {
  margin-right: 10px;
}

.checkout-block .steps .current h2 span.text {
  background-color: #69b7f0;
}
/* ... */

